--- a/main.css
+++ b/main.css
@@ -3,19 +3,23 @@ body {
     height: 100vh;
     margin: 0;
     font-family: PT Sans, sans-serif;
-    background-color: rgb(210, 232, 236);
+    background-color: #000000;
 }
 
 .header {
     max-height: 278px;
     width: 100%;
     display: flex;
+    background: #000000;
+    justify-content: center;
 }
 
 .main {
-    width: 100%;
-    height: auto;
+    width: 1200px;
+    margin: 0 auto;
+    height: 100%;
     position: relative;
+    background-color: #FF9933;
 }
 
 .form {
@@ -26,7 +30,7 @@ body {
     left: calc(50% - 303px);
     padding: 34px 28px;
     box-sizing: border-box;
-    border-top: 8px solid #e6e6e6;
+    border-top: 8px solid #FFCC66;
     background-color: #ffffff;
 }
 
@@ -76,6 +80,10 @@ body {
     outline: 0;
 }
 
+.form__input::placeholder {
+    color: #acacac;
+}
+
 .form__input-block {
     color: rgba(0, 0, 0, 0.87);
     cursor: text;
@@ -95,7 +103,7 @@ body {
     bottom: 0;
     content: "\00a0";
     position: absolute;
-    transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: border-bottom-color 200ms;
     border-bottom: 1px solid rgba(0, 0, 0, 0.42);
     pointer-events: none;
 }
@@ -112,7 +120,7 @@ body {
 }
 
 .header__main-image {
-    width: 100%;
+    width: 1200px;
 }
 
 .button-submit {
@@ -124,6 +132,12 @@ body {
     outline: none;
     text-transform: uppercase;
     cursor: pointer;
+}
+
+.button-submit:disabled {
+    background-color: #9d9d9d;
+    border-color: #9d9d9d;
+    cursor: default;
 }
 
 .video {
